# blurry-themes

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  blurry.toml  pyproject.toml
content/: index.md
content/blog/: index.md  introducing-blurry-themes.md
themes/pico/: Blog.html.jinja  BlogPosting.html  BlogPosting.html.jinja  WebPage.html  WebPage.html.jinja  WebSite.html.jinja  base.html  base.html.jinja
themes/pico/partials/: blogposting-metadata.html  last-updated.html.jinja
